--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==1.5.3
-numpy==1.24.4
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
-streamlit==1.25.0
+pandas
+numpy
+matplotlib
+seaborn
+plotly
+streamlit
